<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".addnote.AddNoteActivity"
    >
    <data>
        <variable name="addnoteviewmodel"
            type="com.example.notesapp.addnote.AddNoteViewModel"/>

    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbAddNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/addNote"
            app:titleTextColor="@color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/title"
            android:text="@={addnoteviewmodel.title}"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{(v) -> addnoteviewmodel.dateSelection(v)}"
            >

            <TextView
                android:id="@+id/tvMeetingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:text="@string/meeting_date"

                />

            <TextView
                android:id="@+id/tvDeliveryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@={addnoteviewmodel.date}"

                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_calendar_black" />

            </RelativeLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvnotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Add Notes..."
            android:text="@={addnoteviewmodel.notes}"
            android:textSize="16sp"

            />

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="@{(v) -> addnoteviewmodel.saveDataInDb()}"
                android:text="@string/save"
                />


        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
